IDEA-388388 JUnit JPMS: open test-module packages to all runtime-required named modules (e.g. @ParameterizedTest)
GitOrigin-RevId: e1a63130f241c76f66f65d3bdcf68c0e0f84f84a